colocando estilo CSS em Recriando.pg.inicial.Instagram

--- a/Recriando.pg.inicial.Instagram/index.html
+++ b/Recriando.pg.inicial.Instagram/index.html
@@ -18,7 +18,7 @@
                     <img
                         src="./img/instagram_name.png"
                         alt="Instagram Name"
-                        class="instagram_name"
+                        class="instagram-name"
                     />
                     <div class="profile-photo">
                         <img
@@ -26,9 +26,24 @@
                             alt="Foto do Perfil"
                         />
                     </div>
-                    <a href="#" class="instagram_login">Continue como iareis</a>
-                    <a href="#" class="instagram_logout">Remover conta</a>
+                    <a href="#" class="instagram-login">Continue como iareis</a>
+                    <a href="#" class="instagram-logout">Remover conta</a>
                 </div>
+                <div class="group">
+                    <p class="not-account">Não é iareis?</p>
+                    <p class="not-account">
+                        <span class="link-blue">Alternar contas</span>
+                        ou
+                        <span class="link-blue">Inscreva-se</span>
+                    </p>
+                </div>
+                <git class="get-the-app">
+                    <p class="get-app">Baixe o aplicativo</p>
+                    <div class="download">
+                        <a href="#" class="app-download"></a>
+                        <a href="#" class="app-download"></a>
+                    </div>
+                </git>
             </div>
         </div>
 
