--- a/Introdução_a_biblioteca_jQuery/index.html
+++ b/Introdução_a_biblioteca_jQuery/index.html
@@ -1,25 +1,79 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="robots" content="index, follow" />
         <link rel="shortcut icon" href="" />
-        <link rel="stylesheet" type="" href="" />
-        <script type="text/javascript" src="assets/js/jquery-3.5.1.js"></script>
-        <script type="text/javascript" src="assets/js/main.js"></script>
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="assets/bootstrap/css/bootstrap.min.css"
+        />
+        <!-- <link rel="stylesheet" type="text/css" href="assets/css/main.css" /> -->
         <title>jQuery / Ajax</title>
     </head>
     <body>
-        <input id="cep" />
-        <button type="button" onclick="consultaCep()">Consultar</button>
-        <hr />
-        <h2>Seu endereço é:</h2>
-        <p id="logradouro"></p>
-        <p id="bairro"></p>
-        <p id="localidade"></p>
-        <p id="uf"></p>
-        <footer></footer>
+        <!-- Estrutura NAVBAR modificado do BOOTSTRAP -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand text-white">Consulta CEP</a>
+            <!-- FORM alterado para DIV -->
+            <div class="d-flex">
+                <input
+                    class="form-control me-2"
+                    type="search"
+                    placeholder="CEP"
+                    id="cep"
+                />
+                <!-- retirado o type="submit" do BUTTON pq isso faz a pg recarregar -->
+                <!-- e a idéia é utilizar o AJAX para mostrar o resultado da pesquisa -->
+                <!-- direto na tela sem recarregar a mesma -->
+                <button class="btn btn-outline-success" onclick="consultaCep()">
+                    BUSCAR
+                </button>
+            </div>
+        </nav>
+        <!-- final da Estrutura NAVBAR modificado do BOOTSTRAP -->
+
+        <!-- Tabela para IMPRESSÃO do endereço pesquisado -->
+        <div class="container cep-hide">
+            <div class="row" style="margin-top: 20px">
+                <h3 id="numberCEP"></h3>
+            </div>
+            <div class="row" style="margin-top: 20px">
+                <table class="table">
+                    <tbody>
+                        <tr>
+                            <td>Logradouro:</td>
+                            <td id="logradouro"></td>
+                        </tr>
+                        <tr>
+                            <td>Bairro:</td>
+                            <td id="bairro"></td>
+                        </tr>
+                        <tr>
+                            <td>Localidade:</td>
+                            <td id="localidade"></td>
+                        </tr>
+                        <tr>
+                            <td>Estado:</td>
+                            <td id="uf"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <!-- final da Tabela para IMPRESSÃO do endereço pesquisado -->
+
+        <footer
+            class="d-flex navbar-dark bg-dark justify-content-center text-white"
+        >
+            Iuri Albuquerque Reis - start 2021
+        </footer>
+
+        <!-- SCRIPTS -->
+        <script type="text/javascript" src="assets/js/jquery-3.5.1.js"></script>
+        <script type="text/javascript" src="assets/js/main.js"></script>
+        <!-- fim SCRIPTS -->
     </body>
 </html>
-
