--- a/Primeiro-jogo-de-naves/index.html
+++ b/Primeiro-jogo-de-naves/index.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="robots" content="index, follow" />
         <link rel="shortcut icon" href="" />
-        <link rel="stylesheet" type="" href="" />
+        <link rel="stylesheet" type="text/css" href="assets/style/style.css" />
         <title>Resgate</title>
     </head>
     <body>
         <!-- Container -->
-        <div class="container">
+        <div id="container">
             <!-- Fundo do Jogo -->
-            <div class="fundoGame">
+            <div id="fundoGame">
                 <!-- Início -->
-                <div class="inicio">
+                <div id="inicio" onclick="start()">
                     <h1>Resgate</h1>
                     <p>
                         Utilize a tecla W para movimentar o helicóptero para
@@ -28,5 +28,10 @@
             <!-- Fim do Fundo do Jogo -->
         </div>
         <!-- Fim Container -->
+        <script
+            type="text/javascript"
+            scr="assets/js/jquery-1.11.1.min.js"
+        ></script>
+        <script type="text/javascript" scr="assets/js/js.js"></script>
     </body>
 </html>
