--- a/Primeiro-jogo-de-naves/index.html
+++ b/Primeiro-jogo-de-naves/index.html
@@ -28,10 +28,15 @@
             <!-- Fim do Fundo do Jogo -->
         </div>
         <!-- Fim Container -->
+
         <script
             type="text/javascript"
-            scr="assets/js/jquery-1.11.1.min.js"
+            src="assets/js/jquery-1.11.1.min.js"
         ></script>
-        <script type="text/javascript" scr="assets/js/js.js"></script>
+        <script
+            type="text/javascript"
+            src="assets/js/jquery-collision.min.js"
+        ></script>
+        <script type="text/javascript" src="assets/js/js.js"></script>
     </body>
 </html>
